--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -31,3 +31,37 @@ body {
     text-wrap: balance;
   }
 }
+
+.formContainer {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width: 50%;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  margin: auto;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.formcenter{
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh;
+}
+
+.form-fontcolor{
+  color:#495057;
+}
